[fus] IJPL-250391 Add new event to usage statistics: `memory.sampled`
GitOrigin-RevId: ca4665bd176bd1137cbea72e4daa2647623c7d73